3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/apply.c: fix_auto_apply() - add some debugging statements, as I've
   seen crashes caused by monsters with scrolls with no spells - need to
   figure out how those are showing up.
server/c_wiz.c: command_kick() - fix occasional crashes when player isn't
  on any map when kicked.  command_create() largely rewritten so it doesn't
  crash the server on any malformed values passed in, add some more features
  so it should be easier to create objects.
MSW 2004-08-16

server/apply.c: better to not create a treasure for spellbooks that already have
    something in inventory. Else you get 2 spells in the book, which then
    mutates when loading (first spell is the book's spell, and order changes every
    load/save...)
Ryo 2004-08-16

Those changes mostly add an item stack for DMs. It makes it easier to dump & patch &
manipulate items without having to copy numbers all the time.
Basically, you can use '$x', meaning item at position x on stack. Or even
omit argument, defaulting to stack top.
When using an object number, it gets stacked automatically (up to 50 items).
Also add a 'diff' command, letting the DM see the result of 'get_ob_diff' on items,
to spot differences easily.

common/player.c: free item stack when freeing player structure.
include/player.h: add item stack to player structure.
include/sproto.h: new functions for stack.
include/win32.h: missed commit for 1.6.1 version.
server/c_misc.c: push item dumped with 'deumpbelow' on dm stack.
server/c_wiz.c: add stack functions. Use'em on patch, create, remove, free, and such.
    Add 'diff' command.
server/commands.c: add new stack & diff commands.
Ryo 2004-08-15
